--- a/app/assets/stylesheets/pages/_projet.scss
+++ b/app/assets/stylesheets/pages/_projet.scss
@@ -54,19 +54,14 @@ label {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 10000;
+    z-index: 999;
   }
-
-  .card:hover .title {
-      display: block;
-    }
 
   .title {
   position: absolute;
   top: 0px;
   width: 100%;
   height: 50px;
-  display: none;
   }
 
   .city {
